--- a/src/index.css
+++ b/src/index.css
@@ -127,7 +127,18 @@
   }
 }
 
+html {
+  @apply scrollbar-thin scrollbar-track-primary-800 scrollbar-thumb-accent-600;
+}
+
 body {
   font-family: "Inter";
 }
 
+[data-scope='dialog'][data-part='backdrop'][data-state='open'] {
+  @apply animate-fadeIn;
+}
+
+[data-scope='dialog'][data-part='backdrop'][data-state='closed'] {
+  @apply animate-fadeOut;
+}
