--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+/* inter-latin-wght-normal */
+@font-face {
+  font-family: "Inter Variable";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 100 900;
+  src: url(@fontsource-variable/inter/files/inter-latin-wght-normal.woff2)
+    format("woff2-variations");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
+    U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 @layer base {
   :root {
     --text-50: #f1f2f4;
@@ -132,13 +145,15 @@ html {
 }
 
 body {
-  font-family: "Inter";
+  @apply font-normal;
+  font-family: "Inter Variable", sans-serif;
 }
 
-[data-scope='dialog'][data-part='backdrop'][data-state='open'] {
+[data-scope="dialog"][data-part="backdrop"][data-state="open"] {
   @apply animate-fadeIn;
 }
 
-[data-scope='dialog'][data-part='backdrop'][data-state='closed'] {
+[data-scope="dialog"][data-part="backdrop"][data-state="closed"] {
   @apply animate-fadeOut;
 }
+
